<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_Point" Id="{3c737c80-ac3c-4b6c-a66c-226648dbb8f7}">
    <Declaration><![CDATA[TYPE ST_Point :
STRUCT
	X	:LREAL;
	Y	:LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>